--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
+    "@neynar/nodejs-sdk": "^5.0.0",
     "@supabase/supabase-js": "^2.39.3",
     "next": "16.0.1",
     "react": "^19.0.0",
